# Battery-Failure-Intelligence-Platform

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ai_workflows/: anomaly_investigation_skill.md  escalation_report_assistant.md  model_debugging_workflow.md  sql_report_generation_skill.md
dashboards/: tableau_dashboard_blueprint.md
docs/: public_battery_dataset_expansion_plan.md
notebooks/: 01_eda_battery_degradation.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_failure_risk_explainability.ipynb
reports/: ad_hoc_200_battery_failure_investigation.md  cell_investigation_case_study.md  early_warning_model_summary.md  escalation_report_sample.csv  high_risk_cells_summary.md  hiring_manager_packet.md  jmp_battery_analysis.jsl  jmp_cell_analysis.csv  model_monitoring_metrics.csv  model_monitoring_summary.md  model_performance_summary.md  model_release_backtest.md  model_release_backtest_metrics.csv  model_release_calibration.csv  nasa_full_archive_local_run_summary.md  oxford_real_data_validation_summary.md  project_readiness_scorecard.md  real_data_coverage_and_limitations.md  real_data_validation_summary.md  survival_rul_predictions.csv  survival_rul_summary.md
scripts/: check_data_source_connectivity.sh  parse_raw_logs.pl  run_daily_pipeline.sh  run_real_data_validation.sh  sql_export.sh  validate_files.sh
sql/: build_marts.sql  create_schema.sql  example_ad_hoc_queries.sql  quality_checks.sql
src/: config.py
tests/: conftest.py  test_feature_engineering.py  test_ingest_mode.py  test_interview_artifacts.py  (+4 more)
(+45 files in other folders)
