[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-failure-intelligence-platform"
version = "0.1.0"
description = "End-to-end battery engineering analytics: warehouse, ML (SOH/RUL/failure), escalation reporting and Tableau-ready outputs (synthetic data)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Portfolio project" }]
keywords = ["battery", "analytics", "machine-learning", "data-engineering", "reliability"]
dependencies = [
    "numpy>=1.24,<3.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "joblib>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
explain = ["shap>=0.44"]
boost = ["lightgbm>=4.0", "xgboost>=2.0"]
duckdb = ["duckdb>=0.9"]
test = ["pytest>=7.4"]

[tool.setuptools]
packages = ["src", "src.ingest", "src.features", "src.models", "src.warehouse", "src.reporting", "src.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py310"
